<resources>
    <string name="app_name">puzzle</string>
    <string name="select_peices">DIFICULTY</string>

    <string name="google_app_ad_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="google_reward_ad_id">ca-app-pub-3940256099942544/5224354917</string>
    <string name="google_native_ad_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="google_benner_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="puzzleDone">PUZZLE COMPLETED !</string>
    <string name="congrats">Congrats</string>
    <string name="close">Close</string>
    <string name="share_head_info">Enjoy Puzzle Game , Create Your Own Puzzles And Solve</string>
    <string name="share_head">\n Download This App For Free.\n    https://play.google.com/store/apps/details?id=</string>
    <string name="email">gamespuzzlegame@gmail.com</string>
    <string name="mailSub">FeedBack From User</string>
    <string name="clickAgainBack">Please click BACK again to exit</string>
    <string name="local_puzzle">Local Puzzle</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="rewardMessage">For playing  with your  puzzles , you need to watch reward video once in a day</string>
    <string name="somethingWrong">Something Wrong</string>
    <string name="local_puzzle_ready">Hey , Now You Are Ready For Play Local Puzzle. Enjoy The Game!</string>
    <string name="no_net">Need Internet Connection For This Action</string>
    <string name="ad_loading">Please Wait Video Loading</string>
    <string name="preview_ready">"Hey, Now you are ready to preiview of puzzle "</string>
    <string name="puzzle_preview">Puzzle Preview</string>
    <string name="preview_message">For Preview of puzzles , you need to watch reward video once in a day</string>
    <string name="qlue">Help</string>
    <string name="qlue_desc">For Placing One Tile In Correct Place , you need to watch reward video</string>
    <string name="qlue_ready">"Hey, Now you are ready to Qlue of puzzle "</string>
    <string name="peices">Peices</string>
    <string name="no_history_msg">"Hey , Complete Game AND COME BACK FOR HISTORY ! "</string>
    <string name="back">Back</string>
    <string name="multiPlayer">Two Player</string>
    <string name="challenge">Challenge</string>
    <string name="solo">Solo Player</string>
    <string name="start">Start Game</string>
    <string name="you">you</string>
    <string name="vs">VS</string>
    <string name="opponent">Opponent</string>
    <string name="finding">Finding....</string>
    <string name="_0">0</string>
    <string name="no_net_title">Network</string>
    <string name="play_again">Play Again</string>
    <string name="ad">AD</string>
    <string name="play_from_gallery">gallery</string>
</resources>
