<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background"
        tools:context=".multiplay.MatchPlayerActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <include layout="@layout/banne_ad_layout" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/light_blue_600"
                android:layout_width="150dp"
                android:layout_height="150dp">


                <ImageView
                    android:src="@drawable/ic_baseline_person_24"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/tv_you"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:background="@drawable/frame"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/you"
                    android:textColor="@color/gnt_white"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>


            <FrameLayout
                android:layout_margin="16dp"
                android:layout_width="80dp"
                android:layout_height="80dp">

                <ImageView
                    android:padding="4dp"
                    android:id="@+id/iv_puzzle"
                    android:rotation="37"
                    android:src="@drawable/ic_plugin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="ContentDescription" />


                <TextView
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="26sp"
                    android:gravity="center"
                    android:text="@string/vs"
                    android:textColor="@color/background"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </FrameLayout>


            <LinearLayout
                android:id="@+id/ly_opponet"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/colorAccent"
                android:layout_width="150dp"
                android:layout_height="150dp">


                <ImageView
                    android:id="@+id/iv_opponent_avatar"
                    android:src="@drawable/ic_baseline_person_24"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />

                <TextView
                    android:id="@+id/tv_opponent"
                    android:textAllCaps="true"
                    android:background="@drawable/frame"
                    android:maxLines="1"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:text="@string/finding"
                    android:textColor="@color/gnt_white"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>