<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<data>
    <import type="android.view.View"/>

    <variable
        name="Onclick"
        type="com.dana.puzzle.tool.OnClickListner" />

</data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <include
            android:id="@+id/ly_add"
            layout="@layout/banne_ad_layout"/>




        <ImageView
            android:id="@+id/iv_congrats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_share"
            android:src="@drawable/congats"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            tools:ignore="ContentDescription" />


        <FrameLayout
            android:id="@+id/framrlayout_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_congrats"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:alpha="1.0"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/frame"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:padding="4dp"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />


        </FrameLayout>



        <LinearLayout
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/framrlayout_image"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">



            <TextView
                android:id="@+id/tv_numOfPieces"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:padding="2dp"
                android:textColor="@color/gnt_white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:shadowRadius="20"
                android:shadowDy="20"
                android:shadowDx="20"
                android:shadowColor="@color/gnt_black"
                android:id="@+id/tv_msg"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:padding="2dp"
                android:text="@string/puzzleDone"
                android:textColor="@color/gnt_white"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_time"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:padding="4dp"
                android:textColor="@color/gnt_white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>





        <Button
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/bt_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/box_border"
            android:fontFamily="@font/montserrat"
            android:onClick="@{(v) ->Onclick.onClick(v)}"
            android:text="@string/close"
            android:textColor="@color/gnt_white"
            android:textSize="16sp" />


        <Button
            app:backgroundTint="@color/gnt_white"
            app:layout_constraintEnd_toStartOf="@+id/bt_close"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/bt_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/box_border"
            android:fontFamily="@font/montserrat"
            android:onClick="@{(v) ->Onclick.onClick(v)}"
            android:text="@string/share"
            android:textColor="@color/gnt_black"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />



    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>