<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="Onclick"
            type="com.dana.puzzle.OnClickListner" />

    </data>


    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


<LinearLayout
    android:layout_marginStart="20dp"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginLeft="20dp">
    <include
        layout="@layout/banne_ad_layout"/>

</LinearLayout>






    <LinearLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">




            <FrameLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="1.0"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/frame"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:scaleType="fitXY"
                    tools:ignore="ContentDescription" />


            </FrameLayout>


        </LinearLayout>




    <LinearLayout
        android:padding="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:padding="4dp"
            android:text="@string/select_peices"
            android:textColor="@color/gnt_white"
            android:textSize="16sp"
            android:textStyle="bold" />



        <LinearLayout
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:background="@drawable/corner_left"
                android:layout_gravity="center"
                android:onClick="@{(v) ->Onclick.onClick(v)}"
                android:id="@+id/iv_prev"
                android:src="@drawable/ic_left_24"
                android:layout_width="40dp"
                android:layout_height="40dp"/>


            <TextView
                android:id="@+id/tv_peiceSize"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/gnt_white"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:padding="4dp"
                android:text="dnskfkh"
                android:textColor="@color/gnt_black"
                android:textSize="16sp"
                android:textStyle="bold" />


            <ImageView
                android:background="@drawable/corner_right"
                android:layout_gravity="center"
                android:onClick="@{(v) ->Onclick.onClick(v)}"
                android:id="@+id/iv_next"
                android:src="@drawable/ic_right_24"
                android:layout_width="40dp"
                android:layout_height="40dp"
                tools:ignore="ContentDescription" />


        </LinearLayout>

        <Button
            android:id="@+id/bt_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/box_border"
            android:fontFamily="@font/montserrat"
            android:onClick="@{(v) ->Onclick.onClick(v)}"
            android:text="@string/play"
            android:textColor="@color/gnt_white"
            android:textSize="16sp" />

        <Button
            android:visibility="gone"
            android:id="@+id/bt_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/box_border"
            android:fontFamily="@font/montserrat"
            android:onClick="@{(v) ->Onclick.onClick(v)}"
            android:text="@string/back"
            android:textColor="@color/gnt_white"
            android:textSize="16sp" />

    </LinearLayout>


    </LinearLayout>



</LinearLayout>

</layout>